@@ -17,8 +17,7 @@ Ctrl-click-drag doesn't work as well as button-2-click drag.
 
 MISSING FEATURES
 
-Close button for the toolbar. Also, Large and Small icons buttons.
-Sort type?
+Toolbar buttons for sort type?
 
 Allow renaming of panel and pinboard icons. Also allow '~' (for
 system-wide configuration).
