@@ -2,6 +2,14 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+08-Sep-2000
+~~~~~~~~~~~
+New Close toolbar button (requested by Martin Ward).
+Toolbar icons can be turned on and off from the Options box.
+Removed the 'Mount' menu entry, since 'Shift Open' does it too.
+Made the Shift Open menu text change depending on what is selected.
+Bugfix: dragging icons around no longer saved the new pinboard state!
+
 07-Sep-2000
 ~~~~~~~~~~~
 Running a second copy of the filer as another user will start a new copy
